test/fixtures/errors/missingFile.js


// on line 4
require("./missing");






// on line 12 char 10
         require("./dir/missing2");